--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>Meet Our Proud Farmer</h2>
         <h3>Fresh Prawns</h3>
         <div class="packedfood-img">
-            <img src="Packedfood2.jpg" alt="packedfood2" class="floating-image packedfood2">
+            <img src="packedfood2.jpg" alt="packedfood2" class="floating-image packedfood2">
         </div>
         <div class="farmer-info">
             <img src="farmer.jpg" alt="Farmer Ganesh Kumar" class="farmer-photo">
